<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.mega.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_notificationsFragment"
            app:destination="@id/notificationsFragment" />

        <action
            android:id="@+id/action_homeFragment_to_cartFragment"
            app:destination="@id/cartFragment" />

        <action
            android:id="@+id/action_homeFragment_to_allCategoriesFragment"
            app:destination="@id/allCategoriesFragment" />

        <action
            android:id="@+id/action_homeFragment_to_allProductsFragment"
            app:destination="@id/allProductsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />

        <action
            android:id="@+id/action_home_to_wishlist"
            app:destination="@id/wishlistFragment" />

        <action
            android:id="@+id/action_home_to_orders"
            app:destination="@id/ordersFragment" />

        <action
            android:id="@+id/action_home_to_account"
            app:destination="@id/accountFragment" />
        <action
            android:id="@+id/action_home_to_food_category"
            app:destination="@id/foodFragment">
            <argument
                android:name="category_id"
                app:argType="integer" />
            <argument
                android:name="category_name"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_home_to_gift_category"
            app:destination="@id/giftFragment">
            <argument
                android:name="category_id"
                app:argType="integer" />
            <argument
                android:name="category_name"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_home_to_fashion_category"
            app:destination="@id/fashionFragment">
            <argument
                android:name="category_id"
                app:argType="integer" />
            <argument
                android:name="category_name"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_home_to_gadgets_category"
            app:destination="@id/gadgetsFragment">
            <argument
                android:name="category_id"
                app:argType="integer" />
            <argument
                android:name="category_name"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_home_to_compute_category"
            app:destination="@id/computeFragment">
            <argument
                android:name="category_id"
                app:argType="integer" />
            <argument
                android:name="category_name"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
    android:id="@+id/wishlistFragment"
    android:name="com.example.mega.ui.wishlist.WishlistFragment"
    android:label="@string/title_wishlist"
        tools:layout="@layout/fragment_wishlist">
        <action
            android:id="@+id/action_wishlist_to_home"
            app:destination="@id/homeFragment" />

        <action
            android:id="@+id/action_wishlist_to_orders"
            app:destination="@id/ordersFragment" />

        <action
            android:id="@+id/action_wishlist_to_account"
            app:destination="@id/accountFragment" />
        <action
            android:id="@+id/action_wishlist_to_productsDetail"
            app:destination="@id/productDetailFragment" />
        <action
            android:id="@+id/action_wishlistFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment"/>
    </fragment>
    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.example.mega.ui.orders.OrdersFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_orders">
        <action
            android:id="@+id/action_ordersFragment_to_orderDetailsFragment"
            app:destination="@id/orderDetailsFragment"/>
        <action
            android:id="@+id/action_orders_to_home"
            app:destination="@id/homeFragment" />

        <action
            android:id="@+id/action_orders_to_wishlist"
            app:destination="@id/wishlistFragment" />

        <action
            android:id="@+id/action_orders_to_account"
            app:destination="@id/accountFragment" />
    </fragment>
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.example.mega.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account">
        <action
            android:id="@+id/action_account_to_home"
            app:destination="@id/homeFragment" />

        <action
            android:id="@+id/action_account_to_wishlist"
            app:destination="@id/wishlistFragment" />

        <action
            android:id="@+id/action_account_to_orders"
            app:destination="@id/ordersFragment" />
    </fragment>
    <fragment
        android:id="@+id/allCategoriesFragment"
        android:name="com.example.mega.ui.categories.AllCategoriesFragment"
        android:label="Categories"
        tools:layout="@layout/fragment_all_categories">
        <action
            android:id="@+id/action_to_gadgets"
            app:destination="@id/gadgetsFragment" />
        <action
            android:id="@+id/action_to_food"
            app:destination="@id/foodFragment" />
        <action
            android:id="@+id/action_to_gift"
            app:destination="@id/giftFragment" />
        <action
            android:id="@+id/action_to_fashion"
            app:destination="@id/fashionFragment" />
        <action
            android:id="@+id/action_to_compute"
            app:destination="@id/computeFragment" />

        <action
            android:id="@+id/action_allCategoriesFragment_to_food_category"
            app:destination="@id/foodFragment"/>
        <action
            android:id="@+id/action_allCategoriesFragment_to_gift_category"
            app:destination="@id/giftFragment"/>
        <action
            android:id="@+id/action_allCategoriesFragment_to_fashion_category"
            app:destination="@id/fashionFragment"/>
        <action
            android:id="@+id/action_allCategoriesFragment_to_gadgets_category"
            app:destination="@id/gadgetsFragment"/>
        <action
            android:id="@+id/action_allCategoriesFragment_to_compute_category"
            app:destination="@id/computeFragment"/>
    </fragment>

    <fragment
        android:id="@+id/gadgetsFragment"
        android:name="com.example.mega.ui.gadgets.GadgetsFragment"
        android:label="Gadgets"
        tools:layout="@layout/fragment_gadgets">
        <action
            android:id="@+id/action_to_filters"
            app:destination="@id/filtersFragment" />
        <action
            android:id="@+id/action_to_cartFragment"
            app:destination="@id/cartFragment"/>
    </fragment>

    <fragment
        android:id="@+id/filtersFragment"
        android:name="com.example.mega.ui.filters.FiltersFragment"
        android:label="Filters"
        tools:layout="@layout/fragment_filters">
        <action
            android:id="@+id/action_to_sort"
            app:destination="@id/sortFragment" />
    </fragment>

    <fragment
        android:id="@+id/sortFragment"
        android:name="com.example.mega.ui.SortFragment"
        android:label="Sort"
        tools:layout="@layout/fragment_sort"/>


    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.mega.ui.CartFragment"
        android:label="Корзина"
        tools:layout="@layout/fragment_cart">

        <action
            android:id="@+id/action_cartFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_cartFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment"/>

        <action
            android:id="@+id/action_cartFragment_to_checkoutFragment"
            app:destination="@id/checkoutFragment"/>
    </fragment>
    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.example.mega.ui.notifications.NotificationsFragment"
        android:label="Уведомления"
        tools:layout="@layout/fragment_notifications">

        <action
            android:id="@+id/action_notificationsFragment_to_cartFragment"
            app:destination="@id/cartFragment"/>
        <action
            android:id="@+id/action_notificationsFragment_to_orderDetailsFragment"
            app:destination="@id/orderDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.example.mega.ui.checkout.CheckoutFragment"
        android:label="Оформление заказа"
        tools:layout="@layout/fragment_checkout">

        <action
            android:id="@+id/action_checkoutFragment_to_cartFragment"
            app:destination="@id/cartFragment"
            app:popUpTo="@id/homeFragment"/>
        <action
            android:id="@+id/action_checkoutFragment_to_orderDetailsFragment"
            app:destination="@+id/ordersDetailFragment"/>
    </fragment>


    <fragment
        android:id="@+id/allProductsFragment"
        android:name="com.example.mega.ui.AllProductsFragment"
        android:label="All Products"
        tools:layout="@layout/all_products_fragment">

        <action
            android:id="@+id/action_allProducts_to_productDetail"
            app:destination="@id/productDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.example.mega.ui.ProductDetailFragment"
        android:label="Product Details"
        tools:layout="@layout/fragment_product_detail">

        <action
            android:id="@+id/action_to_cartFragment"
            app:destination="@id/cartFragment"/>
    </fragment>
    <fragment
        android:id="@+id/foodFragment"
        android:name="com.example.mega.ui.food.FoodFragment"
        android:label="Food"
        tools:layout="@layout/fragment_food">
        <action
            android:id="@+id/action_to_filters"
            app:destination="@id/filtersFragment" />
        <action
            android:id="@+id/action_to_cartFragment"
            app:destination="@id/cartFragment"/>
    </fragment>
    <fragment
        android:id="@+id/fashionFragment"
        android:name="com.example.mega.ui.fashion.FashionFragment"
        android:label="Fashion"
        tools:layout="@layout/fragment_fashion">
        <action
            android:id="@+id/action_to_filters"
            app:destination="@id/filtersFragment" />
        <action
            android:id="@+id/action_to_cartFragment"
            app:destination="@id/cartFragment"/>
    </fragment>
    <fragment
        android:id="@+id/giftFragment"
        android:name="com.example.mega.ui.gift.GiftFragment"
        android:label="Gift"
        tools:layout="@layout/fragment_gift">
        <action
            android:id="@+id/action_to_filters"
            app:destination="@id/filtersFragment" />
        <action
            android:id="@+id/action_to_cartFragment"
            app:destination="@id/cartFragment"/>
    </fragment>
    <fragment
        android:id="@+id/computeFragment"
        android:name="com.example.mega.ui.compute.ComputeFragment"
        android:label="Compute"
        tools:layout="@layout/fragment_compute">
        <action
            android:id="@+id/action_to_filters"
            app:destination="@id/filtersFragment" />
        <action
            android:id="@+id/action_to_cartFragment"
            app:destination="@id/cartFragment"/>
    </fragment>
</navigation>
